[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["FOODPAIRING\\Sybrand <sybrand.dijkstra@pandora.be>"]
readme = "README.md"
packages = [{include = "demo"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
